# geometry_dash_rl

./: pyproject.toml  requirements.txt
data/: data.yaml  expert_data.npz  imitation_data.npz  imitation_state_and_action_data.npz
data/test/labels/: stereo_madness_0001_20251121_133347_jpg.rf.6a5ca3929beb876275a8ffaf0afeaa94.txt  stereo_madness_0002_20251121_133349_jpg.rf.c20af418c2c088d2208e5716d85b287f.txt  (+8 more)
data/train/: labels.cache
data/valid/: labels.cache
logs/PPO_1/: events.out.tfevents.1781438491.Erics-MacBook-Pro.local.18978.0
logs/PPO_2/: events.out.tfevents.1781439313.Erics-MacBook-Pro.local.19238.0  events.out.tfevents.1781439822.Erics-MacBook-Pro.local.19692.0  events.out.tfevents.1781533374.Erics-MBP.home.7076.0
logs/PPO_3/: events.out.tfevents.1781535649.Erics-MBP.home.7595.0
logs/PPO_4_0/: events.out.tfevents.1781537878.Erics-MBP.home.7784.0  events.out.tfevents.1781621616.Erics-MacBook-Pro.local.13749.0  events.out.tfevents.1781621837.Erics-MacBook-Pro.local.13819.0  events.out.tfevents.1781622137.Erics-MacBook-Pro.local.13861.0
logs/PPO_5_0/: events.out.tfevents.1781622399.Erics-MacBook-Pro.local.13953.0  events.out.tfevents.1781622437.Erics-MacBook-Pro.local.13987.0
narr/: sim_challenges.md
notebooks/: Imitation_Learning_Geometry_Dash.ipynb
sim_logs/: progress.csv
src/: action_executor.py  detector.py  feature_extractor.py  geometry_dash_env.py  geometry_dash_sim.py  imitation.py  play_imitation.py  ppo.py  screen_capture.py  train_bc.py  train_sim.py  train_yolo.py  tune_physics.py
(+162 files in other folders)
