[project]
name = "geometry-dash-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "gymnasium>=1.3.0",
    "mss>=10.2.0",
    "pyautogui>=0.9.54",
    "pydirectinput>=1.0.4",
    "pynput>=1.8.2",
    "stable-baselines3>=2.8.0",
    "tensorboard>=2.20.0",
    "ultralytics>=8.4.67",
]

[tool.uv]
override-dependencies = [
    "gymnasium[all]>=1.0.0"
]
